welcome.lessons.welcome.methods.picture.PictureMono1.scala.error
PictureMono1:19: error: not found: value baisseBrossse
  baisseBrossse()
  ^